# django-pgschemas

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .mise.toml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.rst  SECURITY.md  codecov.yml  compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt  run-tests.sh  wait-pg.sh
.github/: FUNDING.yml
.github/workflows/: code.yaml  code.yml  codeql-analysis.yml  deploy.yaml  linters.yaml  main.yml  postgres.yaml  tests.yml
django_pgschemas/: __init__.py  apps.py  cache.py  checks.py  clone.py  clone_schema.sql  log.py  middleware.py  models.py  routers.py  schema.py  settings.py  signals.py  urlresolvers.py  utils.py  volatile.py
django_pgschemas/channels/: __init__.py  auth.py  router.py
django_pgschemas/contrib/: cache.py  channels.py  storage.py
django_pgschemas/contrib/channels/: __init__.py  auth.py  router.py
django_pgschemas/contrib/channels2/: router.py
django_pgschemas/contrib/channels3/: __init__.py  auth.py  router.py
django_pgschemas/contrib/files/: __init__.py  storage.py
django_pgschemas/management/commands/: __init__.py  _executors.py  cloneschema.py  createrefschema.py  migrate.py  migrate_schemas.py  migrateschema.py  runschema.py  sampleschema.py  whowill.py
django_pgschemas/postgresql/: _constraints.py  base.py  introspection.py
django_pgschemas/postgresql_backend/: _constraints.py  base.py  creation.py  introspection.py  settings.py
django_pgschemas/routing/: info.py  middleware.py  models.py  urlresolvers.py
django_pgschemas/test/: cases.py  client.py
django_pgschemas/utils/: __init__.py  iterator.py  other.py  schemas.py  settings.py
docs/: advanced.md  advanced.rst  banners.rst  base.md  basic.md  basic.rst  commands.rst  conf.py  contrib.md  contrib.rst  credits.md  credits.rst  index.md  index.rst  intro.rst  overview.md  overview.rst  reference.rst  requirements.txt  routing.md  settings.md  settings.rst  setup.rst  testing.md  troubleshooting.md  troubleshooting.rst
dpgs_sandbox/: asgi.py  manage.py  settings.py  views.py  wsgi.py
dpgs_sandbox/app_blog/: models.py  urls.py
dpgs_sandbox/app_blog/migrations/: 0001_initial.py
dpgs_sandbox/app_main/: models.py  urls.py  ws_urls.py
dpgs_sandbox/app_main/migrations/: 0001_initial.py
dpgs_sandbox/app_tenants/: models.py  urls.py  ws_urls.py
dpgs_sandbox/app_tenants/migrations/: 0001_initial.py  0002_tenantdata_active.py
dpgs_sandbox/settings/: base.py
dpgs_sandbox/shared_common/: models.py
dpgs_sandbox/shared_common/management/commands/: reverse_url.py
dpgs_sandbox/shared_common/migrations/: 0001_initial.py
dpgs_sandbox/shared_public/: models.py
dpgs_sandbox/shared_public/migrations/: 0001_initial.py  0002_domain_redirect_to_primary.py
dpgs_sandbox/tests/: test_apps.py  test_bug_migrations_in_base_models.py  test_bug_url_cache.py  test_cache.py  test_checks.py  test_commands.py  test_creation.py  test_dynamic_tenant_test_case.py  test_executors.py  test_external_reverse.py  test_external_url_resolution.py  test_file_storage.py  test_log.py  test_middleware.py  test_middleware_redirection.py  test_protocol_router.py  test_schema.py  test_schema_creation_commands.py  test_signals.py  test_static_tenant_test_case.py  test_tenant_commands.py  test_tenant_test_case.py  test_tenants.py  test_test_client.py  test_urlresolvers.py  test_utils.py  test_whowill_command.py
sandbox/: asgi.py  consumers.py  routing.py  settings.py  views.py  wsgi.py
sandbox/app_blog/: urls.py
sandbox/app_main/: urls.py  ws_urls.py
sandbox/app_tenants/: urls.py  ws_urls.py
sandbox/app_tenants/migrations/: 0001_initial.py
sandbox/settings/: base.py  full.py  static_only.py
sandbox/shared_common/: models.py
sandbox/shared_common/management/commands/: reverse_url.py
sandbox/shared_public/: models.py
sandbox/shared_public/migrations/: 0001_initial.py
sandbox/templates/: index.html
sandbox/tests/: conftest.py  test_apps.py  test_checks.py  test_log.py  test_schema.py  test_signals.py  test_tenant_integration.py  test_tenant_views.py  test_utils.py
sandbox/tests/bugs/: test_migrations_in_base_models.py  test_multithread_with_schema.py  test_url_cache.py
sandbox/tests/commands/: test_executors.py  test_reverse_url.py  test_schema_creation.py  test_tenant_related.py  test_whowill.py
sandbox/tests/contrib/: test_cache.py  test_channels.py  test_storage.py
sandbox/tests/routing/: test_middleware.py  test_models.py  test_urlresolvers.py
sandbox/tests_dj/: test_bug_migrations_in_base_models.py  test_cache.py  test_checks.py  test_executors.py  test_middleware_redirection.py  test_signals.py  test_static_tenant_test_case.py  test_tenant_commands.py  test_tenants.py
tests/: test_django_pgschemas.py
