[project]
name = "django-pgschemas"
version = "1.1.1"
description = "Django multi-tenancy through Postgres schemas"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Lorenzo Peña", email = "lorinkoz@gmail.com" }
]
keywords = ["django", "tenants", "schemas", "multi-tenancy", "postgres"]
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-asyncio",
    "ruff",
    "channels[daphne]",
    "mkdocs-material",
]
psycopg = [
    "psycopg",
]

[project.urls]
repository = "https://github.com/lorinkoz/django-pgschemas"
documentation = "https://django-pgschemas.readthedocs.io/"

[tool.ruff]
select = ["I", "E", "F"]
line-length = 100
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["django_pgschemas"]

[tool.mypy]
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["channels.*", "psycopg.*", "psycopg2.*", "django.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "docs.*",
    "sandbox.*",
    "django_pgschemas.test.*",
    "django_pgschemas.contrib.*",
    "django_pgschemas.management.*",
    "django_pgschemas.postgresql.*",
]
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sandbox.settings"
django_find_project = false
pythonpath = ["."]
markers = ["bug"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
